--- a/src/sass/views/_fullwidth.scss
+++ b/src/sass/views/_fullwidth.scss
@@ -343,7 +343,9 @@ $content_margin_right: 1rem;//$rhu * (1/3);
 			}
 		}
 		.empty-item {
-			width: calc((100% - #{abs($margin_left * 2 + $margin_right * 2 + $content_margin_left + $content_margin_right)}) * (2/3));
+			// FIXME FIXME FIXME : parallax breaks if item is not 100%;
+			width: auto;
+			right: calc(33.333333% - 3px);
 		}
 		.media-item {
 			.placeholder:before {
